--- a/.golangci.yml
+++ b/.golangci.yml
@@ -5,6 +5,7 @@
 # goimports -w -local github.com/SKF/go-pas-client <file>
 
 run:
+  timeout: 5m
   skip-dirs:
     - internal/models/
   skip-files:
