--- a/.golangci.yml
+++ b/.golangci.yml
@@ -2,9 +2,10 @@
 # https://github.com/golangci/golangci-lint/blob/master/.golangci.example.yml
 
 # To remedy '<file>: File is not `goimports`-ed (goimports)' do:
-# goimports -w -local github.com/SKF/go-pas-client <file>
+# goimports -w -local github.com/SKF/go-notification-client <file>
 
 run:
+  timeout: 5m
   skip-dirs:
     - internal/models/
   skip-files:
